Added Joystick support to simulation. Created a separate launch file for joystick

--- a/src/simulation/package.xml
+++ b/src/simulation/package.xml
@@ -8,8 +8,10 @@
   <license>Apache-2.0</license>
 
   <depend>rclpy</depend>
+  <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>webots_ros2_driver</depend>
+  <depend>utilities</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
