--- a/src/jetson_pkg/package.xml
+++ b/src/jetson_pkg/package.xml
@@ -14,6 +14,7 @@
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>python-opencv</exec_depend>
   <exec_depend>apriltag</exec_depend>
 
