--- a/src/jetson_pkg/package.xml
+++ b/src/jetson_pkg/package.xml
@@ -16,7 +16,8 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>python-opencv</exec_depend>
-  <exec_depend>apriltag</exec_depend>
+  <exec_depend>pupil_apriltags</exec_depend>
+  <exec_depend>cv_bridge</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
