--- a/src/jetson_pkg/package.xml
+++ b/src/jetson_pkg/package.xml
@@ -15,6 +15,8 @@
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>custom_msgs</exec_depend>
   <exec_depend>python-opencv</exec_depend>
   <exec_depend>pupil_apriltags</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
